--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/async": "^2.0.40",
+    "@types/moment": "^2.13.0",
+    "@types/mongoose": "^4.7.19",
+    "async": "^2.5.0",
     "babel-cli": "^6.24.1",
     "dreamjs": "^0.1.8",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
     "fast-csv": "^2.4.0",
     "fs": "0.0.1-security",
     "moment": "^2.18.1",
