--- a/package.json
+++ b/package.json
@@ -20,6 +20,22 @@
     "fast-csv": "^2.4.0",
     "fs": "0.0.1-security",
     "moment": "^2.18.1",
-    "mongoose": "^4.11.3"
+    "mongoose": "^4.11.3",
+    "body-parser": "^1.13.3",
+    "compression": "^1.5.2",
+    "cookie-parser": "^1.3.3",
+    "glob": "^6.0.4",
+    "method-override": "^2.3.0",
+    "mongoose-double": "0.0.1",
+    "morgan": "^1.6.1",
+    "serve-favicon": "^2.3.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-develop": "^0.4.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "request": "^2.60.0",
+    "time-grunt": "^1.2.1",
+    "load-grunt-tasks": "^3.2.0"
   }
 }
