--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
     "@types/mongoose": "^4.7.19",
     "async": "^2.5.0",
     "babel-cli": "^6.24.1",
+    "body-parser": "^1.13.3",
+    "compression": "^1.5.2",
+    "cookie-parser": "^1.3.3",
     "dreamjs": "^0.1.8",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "fast-csv": "^2.4.0",
     "fs": "0.0.1-security",
-    "moment": "^2.18.1",
-    "mongoose": "^4.11.3",
-    "body-parser": "^1.13.3",
-    "compression": "^1.5.2",
-    "cookie-parser": "^1.3.3",
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
+    "moment": "^2.18.1",
+    "mongoose": "^4.11.3",
     "mongoose-double": "0.0.1",
     "morgan": "^1.6.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "sync": "^0.2.5"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
